Create flexbox layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">    <title>Awesome Website</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header-container">
+            <div class="header-logo">Header Logo
+            </div>
+            <div class="header-links">
+                <a href="default.html">header link one</a>
+                <a href="default.html">header link two</a>
+                <a href="default.html">header link three</a>
+            </div>
+        </div>
+        <div class="hero">
+            <div class="top-left-content">
+                <div class="header">This website is awesome</div>
+                <div class="content">
+                    This website has some subtext that goes here under the main title.
+                    It's a smaller font and the color is lower contrast
+                </div>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-img">this is a placeholder for an image</div>
+        </div>
+        <div class="middle-content">
+            <div class="banner">Some random information.</div>
+            <div class="flex-container">    
+                <div class="flex-wrap">
+                    <div class="thumbnails"></div>
+                    <div class="thumb-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="flex-wrap">
+                    <div class="thumbnails"></div>
+                    <div class="thumb-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="flex-wrap">
+                    <div class="thumbnails"></div>
+                    <div class="thumb-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="flex-wrap">
+                    <div class="thumbnails"></div>
+                    <div class="thumb-text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-content">
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a
+                customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All I know
+                is that it looks nice.
+            </div>
+            <div class="attribution">
+                -Thor, God of Thunder
+            </div>
+        </div>
+        <div class="cta">
+            <div class="cta-container">
+                <div class="cta-left">
+                    <div class="cta-header">Call to action! It's time!</div>
+                    <div class="cta-body">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="cta-right">
+                    <button id="cta">Sign up</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            Copyright © The Odin Project 2021
+        </div>
+    </div>
 </body>
 </html>
